# techregparser

./: .gitignore  LICENSE  MANIFEST.in  README.md  lessons_learned.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/statute-guide/references/: extraction_playbook.md
TechRegParser/: __init__.py  config.py  main.py  viewer.html
TechRegParser/agents/: __init__.py  orchestrator.py
TechRegParser/evaluation/: __init__.py  eval_framework.py
TechRegParser/memory/: __init__.py  session_store.py
TechRegParser/models/: __init__.py  citation.py  requirement.py  statute_structure.py
TechRegParser/skills/statute-guide/: SKILL.md
TechRegParser/skills/statute-guide/references/: a_guide_to_reading_interpreting_and_applying_statutes_1.md  extraction_playbook.md  index.md
TechRegParser/tools/: __init__.py  citation_verify.py  definition_lookup.py
